--- a/serverless/onnx/traffic-sign/function-gpu.yaml
+++ b/serverless/onnx/traffic-sign/function-gpu.yaml
@@ -50,7 +50,7 @@ spec:
         - kind: WORKDIR
           value: /opt/nuclio
         - kind: RUN
-          value: wget https://raw.githubusercontent.com/Trung78z/Thesis_University/main/services/models/yolo11m.onnx
+          value: pip install gdown && gdown https://drive.google.com/uc?id=1-8VEJM6sOw5Nf4TqMJ9INDzbKi4fpZ_l
         - kind: RUN
           value: ln -s /usr/bin/python3 /usr/bin/python
 
