--- a/serverless/onnx/yolov8/function.yaml
+++ b/serverless/onnx/yolov8/function.yaml
@@ -9,8 +9,8 @@ metadata:
         { "id": 0, "name": "person", "type": "rectangle" },
         { "id": 1, "name": "bicycle", "type": "rectangle" },
         { "id": 2, "name": "car", "type": "rectangle" },
-        { "id": 3, "name": "motorbike", "type": "rectangle" },
-        { "id": 4, "name": "aeroplane", "type": "rectangle" },
+        { "id": 3, "name": "motorcycle", "type": "rectangle" },
+        { "id": 4, "name": "airplane", "type": "rectangle" },
         { "id": 5, "name": "bus", "type": "rectangle" },
         { "id": 6, "name": "train", "type": "rectangle" },
         { "id": 7, "name": "truck", "type": "rectangle" },
